fix recipe details being cut off

--- a/src/style.scss
+++ b/src/style.scss
@@ -57,7 +57,8 @@
 	}
 	.detail-wrap
 	{
-		max-height: 200px;
+		// min-height: 200px;
+		max-height: 400px;
 	}
 }
 .detail-wrap
@@ -103,5 +104,5 @@
 
 .margin-8
 {
-	margin: 8px;
+	margin: 16px;
 }
